--- a/index.html
+++ b/index.html
@@ -9,14 +9,34 @@
 <body>
     <div class="container">
         <div class="container__photo photo">
-<!--            <div class="photo__wrap"></div>-->
+            <div class="photo__wrap"></div>
         </div>
         <div class="container__content content">
-            <div class="content__section">s1</div>
-            <div class="content__section">s2</div>
-            <div class="content__section">s3</div>
-            <div class="content__section">s4</div>
-            <div class="content__section">s5</div>
+            <div class="content__section section" id="s1">
+                <div class="section__wrap">
+                    <div>TEXT1</div>
+                </div>
+            </div>
+            <div class="content__section section" id="s2">
+                <div class="section__wrap">
+                    <div>TEXT2</div>
+                </div>
+            </div>
+            <div class="content__section section" id="s3">
+                <div class="section__wrap">
+                    <div>TEXT3</div>
+                </div>
+            </div>
+            <div class="content__section section" id="s4">
+                <div class="section__wrap">
+                    <div>TEXT4</div>
+                </div>
+            </div>
+            <div class="content__section section" id="s5">
+                <div class="section__wrap">
+                    <div>TEXT5</div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
