--- a/index.html
+++ b/index.html
@@ -39,5 +39,6 @@
             </div>
         </div>
     </div>
+    <script type="application/javascript" src="index.js"></script>
 </body>
 </html>
