--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
         <div class="container__content content">
             <div class="content__section section" id="s1">
                 <div class="section__wrap">
-                    <div>TEXT1</div>
+                    <div>
+                        <h1>TEXT1</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat, recusandae.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat, recusandae.</p>
+                    </div>
                 </div>
             </div>
             <div class="content__section section" id="s2">
