--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
             <div class="content__section section" id="s1">
                 <div class="section__wrap">
                     <div>
-                        <h1>TEXT1</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat, recusandae.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat, recusandae.</p>
+                        <h1>I’m Denis Ivanov,</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At blanditiis, culpa, distinctio
+                            dolorem ducimus eligendi eum eveniet explicabo fugiat fugit illo nihil perspiciatis
+                            provident quae quaerat quia sunt, totam voluptate?</p>
+                        <a class="hvr-sweep-to-right" href="#">
+                            <span>Learn More</span>
+                        </a>
                     </div>
                 </div>
             </div>
