--- a/index.html
+++ b/index.html
@@ -12,39 +12,58 @@
             <div class="photo__wrap"></div>
         </div>
         <div class="container__content content">
+            <!--    s1 start    -->
             <div class="content__section section" id="s1">
                 <div class="section__wrap">
-                    <div>
-                        <h1>I’m Denis Ivanov,</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At blanditiis, culpa, distinctio
-                            dolorem ducimus eligendi eum eveniet explicabo fugiat fugit illo nihil perspiciatis
-                            provident quae quaerat quia sunt, totam voluptate?</p>
-                        <a class="hvr-sweep-to-right" href="#">
-                            <span>Learn More</span>
-                        </a>
-                    </div>
+                    <h1>I’m Denis Ivanov,</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At blanditiis, culpa, distinctio
+                        dolorem ducimus eligendi eum eveniet explicabo fugiat fugit illo nihil perspiciatis
+                        provident quae quaerat quia sunt, totam voluptate?</p>
+                    <a class="hvr-sweep-to-right" href="#" id="btn-move">
+                        <span>Learn More</span>
+                    </a>
                 </div>
             </div>
+            <!--    s1 end      -->
+            <!--    s2 start    -->
             <div class="content__section section" id="s2">
                 <div class="section__wrap">
-                    <div>TEXT2</div>
+                    <h2>Why I can help you.</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur culpa error, est ex,
+                        fugiat inventore ipsa ipsam magni minus neque nihil numquam optio possimus reprehenderit
+                        sapiente unde ut veniam vero.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur culpa error, est ex,
+                        fugiat inventore ipsa ipsam magni minus neque nihil numquam optio possimus reprehenderit
+                        sapiente unde ut veniam vero.</p>
                 </div>
             </div>
+            <!--    s2 end      -->
+            <!--    s3 start    -->
             <div class="content__section section" id="s3">
                 <div class="section__wrap">
-                    <div>TEXT3</div>
+                    <h2>What I can do for you.</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur culpa error, est ex,
+                        fugiat inventore ipsa ipsam magni minus neque nihil numquam optio possimus reprehenderit
+                        sapiente unde ut veniam vero.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur culpa error, est ex,
+                        fugiat inventore ipsa ipsam magni minus neque nihil numquam optio possimus reprehenderit
+                        sapiente unde ut veniam vero.</p>
                 </div>
             </div>
+            <!--    s3 end      -->
+            <!--    s4 start    -->
             <div class="content__section section" id="s4">
                 <div class="section__wrap">
-                    <div>TEXT4</div>
+                    <h2>Contact Me.</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur culpa error, est ex,
+                        fugiat inventore ipsa ipsam magni minus neque nihil numquam optio possimus reprehenderit
+                        sapiente unde ut veniam vero.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur culpa error, est ex,
+                        fugiat inventore ipsa ipsam magni minus neque nihil numquam optio possimus reprehenderit
+                        sapiente unde ut veniam vero.</p>
                 </div>
             </div>
-            <div class="content__section section" id="s5">
-                <div class="section__wrap">
-                    <div>TEXT5</div>
-                </div>
-            </div>
+            <!--    s4 end      -->
         </div>
     </div>
     <script type="application/javascript" src="index.js"></script>
