--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>My Profile</title>
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface%7CArapey&amp;subset=latin-ext" rel="stylesheet">
     <link href="./assets/styles.css" rel="stylesheet" >
     <meta name="viewport" content="width=device-width">
 </head>
