--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
             <div class="content__section section" id="s3">
                 <div class="section__wrap">
                     <h2>What I can do for you.</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur culpa error, est ex,
-                        fugiat inventore ipsa ipsam magni minus neque nihil numquam optio possimus reprehenderit
-                        sapiente unde ut veniam vero.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur culpa error, est ex,
-                        fugiat inventore ipsa ipsam magni minus neque nihil numquam optio possimus reprehenderit
-                        sapiente unde ut veniam vero.</p>
+                    <ul class="service-list">
+                        <li class="service-list__item"><i class="fa-solid fa-code"></i>Front-End</li>
+                        <li class="service-list__item"><i class="fa-brands fa-js"></i>Back-End</li>
+                        <li class="service-list__item"><i class="fa-solid fa-database"></i>Data Base</li>
+                        <li class="service-list__item"><i class="fa-solid fa-person-snowboarding"></i>Team Lead</li>
+                    </ul>
                 </div>
             </div>
             <!--    s3 end      -->
