Description about me

--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
             <div class="content__section section" id="s1">
                 <div class="section__wrap">
                     <h1>I’m Denis Ivanov,</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At blanditiis, culpa, distinctio
-                        dolorem ducimus eligendi eum eveniet explicabo fugiat fugit illo nihil perspiciatis
-                        provident quae quaerat quia sunt, totam voluptate?</p>
+                    <p>I’m Full Stack developer with 13+ experience.
+                        Usually I do admin panels, metrics dashboards, financial boards and other cool things with rich user interface.
+                        I like big and ambitious projects. I am also fond of sports and self-education.
+                    </p>
                     <a class="hvr-sweep-to-right" href="#" id="btn-move">
                         <span>Learn More</span>
                     </a>
