Description about me

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
             <div class="content__section section" id="s2">
                 <div class="section__wrap">
                     <h2>Why I can help you.</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur culpa error, est ex,
-                        fugiat inventore ipsa ipsam magni minus neque nihil numquam optio possimus reprehenderit
-                        sapiente unde ut veniam vero.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur culpa error, est ex,
-                        fugiat inventore ipsa ipsam magni minus neque nihil numquam optio possimus reprehenderit
-                        sapiente unde ut veniam vero.</p>
+                    <p>I have been involved in the development of successful startups from scratch - so for your project,
+                        I will choose a safe development path. Without unnecessary movements, stress and with a reserve
+                        for the future.</p>
+                    <p>Sometimes I worked on projects that needed to be rescued.
+                        Sometimes I worked on projects where it was necessary to improve the team and lead it.</p>
+                    <p>And I can apply the same experience again.</p>
                 </div>
             </div>
             <!--    s2 end      -->
