--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My Profile</title>
+    <title>My Profile - Denis Ivanov</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet">
     <link href="./assets/styles.css" rel="stylesheet" >
     <meta name="viewport" content="width=device-width">
@@ -17,7 +17,7 @@
             <div class="content__section section" id="s1">
                 <div class="section__wrap">
                     <h1>I’m Denis Ivanov,</h1>
-                    <p>I’m Full Stack developer with 13+ experience.
+                    <p>I’m Full Stack developer with <b id="experience">13</b>+ experience.
                         Usually I do admin panels, metrics dashboards, financial boards and other cool things with rich user interface.
                         I like big and ambitious projects. I am also fond of sports and self-education.
                     </p>
@@ -73,6 +73,5 @@
         </div>
     </div>
     <script type="application/javascript" src="index.js"></script>
-<!--    <script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"></script>-->
 </body>
 </html>
