--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
                         <li><i class="fa-solid fa-phone"></i>+38(071)419-71-65</li>
                         <li><i class="fa-solid fa-envelope"></i>denquick@gmail.com</li>
                     </ul>
-                    <form class="send-email" action="">
+                    <form class="send-email" id="contact-form">
                         <input type="text" name="name" placeholder="Your Name" class="form-control">
                         <input type="text" name="email" placeholder="Your Email" class="form-control">
                         <textarea name="message" placeholder="Your Message" class="form-control"></textarea>
                         <button id="btn-submit" class="hvr-sweep-to-right" type="submit">Send Mail</button>
                     </form>
-                </div>
+            </div>
             </div>
             <!--    s4 end      -->
         </div>
