--- a/index.html
+++ b/index.html
@@ -62,10 +62,15 @@
                         <li><i class="fa-solid fa-envelope"></i>denquick@gmail.com</li>
                     </ul>
                     <form class="send-email" id="contact-form">
-                        <input type="text" name="name" placeholder="Your Name" class="form-control">
                         <input type="text" name="email" placeholder="Your Email" class="form-control">
                         <textarea name="message" placeholder="Your Message" class="form-control"></textarea>
                         <button id="btn-submit" class="hvr-sweep-to-right" type="submit">Send Mail</button>
+                        <div class="lds-facebook">
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                        </div>
                     </form>
             </div>
             </div>
