--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
                         <li><i class="fa-solid fa-phone"></i>+38(071)419-71-65</li>
                         <li><i class="fa-solid fa-envelope"></i>denquick@gmail.com</li>
                     </ul>
+                    <div class="notify-success-sending">
+                        <h3><i class="fa-solid fa-circle-info"></i>Your email is success send.</h3>
+                        <p>I will read as soon as possible. Thanks!</p>
+                    </div>
                     <form class="send-email" id="contact-form">
                         <input type="text" name="email" placeholder="Your Email" class="form-control">
                         <textarea name="message" placeholder="Your Message" class="form-control"></textarea>
