--- a/index.html
+++ b/index.html
@@ -75,8 +75,27 @@
                             <div></div>
                             <div></div>
                         </div>
+                        <div class="form-errors">
+                            <p>
+                                Error form. Something went wrong.
+                            </p>
+                        </div>
                     </form>
-            </div>
+                </div>
+                    <div class="footer">
+                        <span class="footer__circle">
+                            <i class="fa-solid fa-file-pdf"></i>
+                        </span>
+                        <span class="footer__circle">
+                            <i class="fa-brands fa-github"></i>
+                        </span>
+                        <span class="footer__circle">
+                            <i class="fa-brands fa-linkedin-in"></i>
+                        </span>
+                        <span class="footer__circle">
+                            <i class="fa-brands fa-twitter"></i>
+                        </span>
+                    </div>
             </div>
             <!--    s4 end      -->
         </div>
