--- a/index.html
+++ b/index.html
@@ -88,16 +88,16 @@
                 </div>
                     <div class="footer">
                         <span class="footer__circle">
-                            <i class="fa-solid fa-file-pdf"></i>
+                            <a title="Open my resume in PDF format" href="./assets/resume.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i></a>
                         </span>
                         <span class="footer__circle">
-                            <i class="fa-brands fa-github"></i>
+                            <a title="See my github profile" href="https://github.com/DenQ" target="_blank"><i class="fa-brands fa-github"></i></a>
                         </span>
                         <span class="footer__circle">
-                            <i class="fa-brands fa-linkedin-in"></i>
+                            <a title="See my linkedin profile" href="https://www.linkedin.com/in/denis-ivanov-104820112/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
                         </span>
                         <span class="footer__circle">
-                            <i class="fa-brands fa-twitter"></i>
+                            <a title="See my twitter" href="https://twitter.com/den_quick" target="_blank"><i class="fa-brands fa-twitter"></i></a>
                         </span>
                     </div>
             </div>
