--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>My Profile - Denis Ivanov</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet">
     <link href="./assets/styles.css" rel="stylesheet" >
+    <link href="./assets/media.css" rel="stylesheet" >
     <meta name="viewport" content="width=device-width">
 
     <script type="module" src="https://unpkg.com/friendly-challenge@0.9.1/widget.module.min.js" async defer></script>
