--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                         <p>I will read as soon as possible. Thanks!</p>
                     </div>
                     <form class="send-email" id="contact-form">
-                        <input type="text" name="email" placeholder="Your Email" class="form-control">
-                        <textarea name="message" placeholder="Your Message" class="form-control"></textarea>
+                        <input type="email" name="email" placeholder="Your Email" class="form-control" required>
+                        <textarea name="message" placeholder="Your Message" class="form-control" required></textarea>
                         <div class="frc-captcha" data-sitekey="FCMNML0CSIKKVES0" data-callback="captchaHandler" data-start="none"></div>
                         <button id="btn-submit" class="hvr-sweep-to-right disabled" type="submit">Send Mail</button>
                         <div class="lds-facebook">
